assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

/* Asterisk wildcard selector used to override the browsers' default styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic styles for the Project */
    color: #1c4e65;
    font-family: 'Open Sans', sans-serif;

}

/* Header */
header {
    background-color: #c4e2e4;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #1c4e65;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: 'Roboto', sans-serif;
    letter-spacing: 2px;
    color: #333333;
}

#menu {
    font-size: 110%;
    letter-spacing: 3px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #333333;
}

/* Navbar with dropdown feature */
nav {
    position: absolute;
    background-color: #c4e2e4;
    width: 100%;
    left: 0;
    padding: 1rem;
    box-shadow: 0 2px 2px #333333;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main */
main {
    background-color: blueviolet;
    /* Make main element take up excess space to push footer down */
    flex: 1 0 auto;
    margin-top: 79px;
}

/* Footer */
footer {
    background-color: chartreuse;
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    /* Main content */
    main {
        /* Push main content for larger header */
        margin-top: 150px;
    }

